# claudio

./: .gitignore  LICENSE.md  README.md  claudio-task.template.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
claudio/: __init__.py  __main__.py  cache.py  cli.py  config.py  executor.py  repl.py  session_files.py  usage.py
claudio/commands/: __init__.py  ask.py  build.py  run.py  run_prompt.py  setup.py  stats.py
claudio/completions/: __init__.py  bash.py  powershell.py  zsh.py
claudio/pipeline/: compress.py  filter.py  process.py  prompt.py
claudio/utils/: args.py  colors.py  files.py  git_context.py  markdown.py  model_router.py  output.py  project_context.py  spinner.py  stack_detect.py  tokens.py  update_check.py
tests/: test_args.py  test_breadcrumb.py  test_cache_session.py  test_compress.py  test_executor.py  test_git_context.py  test_integration.py  test_markdown.py  test_mode_terseness.py  test_model_routing.py  test_mutating_cache.py  test_need_clarification.py  test_need_context.py  test_needs_build.py  test_permission_posture.py  test_project_context.py  test_prompt_builder.py  test_repl.py  test_session_files.py  test_spinner.py  test_stack_detect.py  test_sticky_mode.py  test_streaming.py  test_tokens.py  test_update_check.py
