[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudio-cli"
dynamic = ["version"]
description = "Claude Intelligence Optimizer — reduce token waste, structure inputs, optimize Claude workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Yves Guillaume" }]
keywords = ["claude", "cli", "ai", "token-optimization", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

dependencies = [
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
# tiktoken gives BPE-based token counts (closer to Claude than the char-density
# heuristic, though still an approximation — it's OpenAI's BPE). Optional so the
# base install stays dependency-light: `pip install claudio-cli[tokens]`.
tokens = ["tiktoken>=0.5"]

[project.urls]
Homepage = "https://github.com/GuillaumeYves/claudio"
Repository = "https://github.com/GuillaumeYves/claudio"
Issues = "https://github.com/GuillaumeYves/claudio/issues"

[project.scripts]
claudio = "claudio.repl:main"

[tool.setuptools.dynamic]
version = {attr = "claudio.__version__"}

[tool.setuptools.packages.find]
include = ["claudio*"]

[tool.setuptools.package-data]
claudio = ["py.typed"]
